--- a/ContactManager_WebApp.DataAccess/ContactManager_WebApp.DataAccess.csproj
+++ b/ContactManager_WebApp.DataAccess/ContactManager_WebApp.DataAccess.csproj
@@ -1,24 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.5" />
   </ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\ContactManager_WebApp.DataAccess\ContactManager_WebApp.DataAccess.csproj" />
-		<ProjectReference Include="..\ContactManager_WebApp.BusinessLogic\ContactManager_WebApp.BusinessLogic.csproj" />
-	</ItemGroup>
 
 </Project>
